--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,7 @@ jobs:
       secure: false
 selenium:
  url: http://localhost:4444/wd/hub
+ job-stagger-offset: 30
 storage:
     graphite:
         host:  graphite.mysite.org
