--- a/example/config.yaml
+++ b/example/config.yaml
@@ -26,12 +26,16 @@ storage:
         host:  graphite.mysite.org
         port: 2003
         protocol: tcp
-        metric-namespace: crabby
+        metric-namespace: crabby.crabby-sfo-1
     dogstatsd:
         host: localhost
         port: 8125
-        metric-namespace: crabby
+        metric-namespace: crabby.crabby-sfo-1
         tags:
             - crabby-sfo-1
+    prometheus:
+        host: prometheus.mysite.org
+        port: 9091
+        metric-namespace: crabby.crabby-sfo-1
 report-internal-metrics: true
 internal-metrics-gathering-interval: 15
