--- a/example/config-api.yaml
+++ b/example/config-api.yaml
@@ -11,7 +11,7 @@ jobs:
    type: simple
    url: https://my-api-here/some/resource
    method: post
-   body: {"hello": "world"}
+   body: "{\"hello\": \"world\"}"
    interval: 10
    tags:
       region: us-central1
